# nixl-doca-31

./: CODEOWNERS  Cargo.toml  README.md  meson.build  meson_options.txt  nixl_logging.py  python_logging.ini
.ci/assets/: cleanup.json  nixl-version-info.json.template
.ci/dockerfiles/: Dockerfile.wheel-builder
.ci/docs/: build-wheel-matrix-ci.md
.ci/jenkins/lib/: build-matrix.yaml  build-wheel-matrix.yaml  nixl-container-build-matrix.yaml  test-matrix.yaml
.ci/jenkins/pipeline/: Jenkinsfile  proj-jjb.yaml
.ci/scripts/: check_prints.sh  common.sh  server_port.sh
.github/workflows/: aws_s3_validation.yml  copyright-check.ps1  pylint.yml  python-checks.yml
.gitlab/: build.sh  check_prints.sh  test_cpp.sh  test_nixlbench.sh  test_python.sh  test_rust.sh
benchmark/kvbench/: README.md
benchmark/kvbench/commands/: args.py  io_size.py  kvcache.py  nixlbench.py  plan.py  profile.py
benchmark/kvbench/models/: model_config.py
benchmark/kvbench/runtime/: etcd_rt.py
benchmark/kvbench/test/: custom_traffic_perftest.py  inference_workload_matgen.py  sequential_custom_traffic_perftest.py  traffic_pattern.py
benchmark/nixlbench/: README.md
benchmark/nixlbench/contrib/: build.sh
benchmark/nixlbench/src/: main.cpp
contrib/: Dockerfile  Dockerfile.manylinux  build-container.sh  wheel_add_ucx_plugins.py
contrib/aws-efa/: aws_test.sh
examples/python/: blocking_send_recv_example.py  nixl_api_example.py  nixl_gds_example.py  partial_md_example.py
src/api/cpp/: nixl_params.h  nixl_types.h
src/api/python/: _api.py  logging.py  meson.build  (+1 more)
src/bindings/: meson.build
src/bindings/python/: meson.build  nixl_bindings.cpp
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_listener.cpp  transfer_request.h
src/infra/: nixl_descriptors.cpp
test/gtest/: common.cpp  common.h  error_handling.cpp  metadata_exchange.cpp  test_transfer.cpp
test/nixl/: meson.build  nixl_doca_stream_test.cu
test/python/: desc_perf.py  prep_xfer_perf.py  test_nixl_bindings.py
(+56 files in other folders)
